--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "eslint": "^7.6.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^6.2.2",
+    "http-server": "^0.12.3",
     "node-libs-browser": "^0.5.3",
+    "strip-loader": "^0.1.2",
     "webpack": "^4.44.1"
   }
 }
